fix checkbox radius, menu items, add icons, and collapse menu item + delete button

--- a/menuchi-app/src/app/user/items-page/items-page.component.scss
+++ b/menuchi-app/src/app/user/items-page/items-page.component.scss
@@ -6,6 +6,10 @@
     display: flex;
     flex-direction: row;
     gap: 1rem;
+
+    > button {
+      width: 14rem;
+    }
   }
 
   nz-layout,
@@ -13,53 +17,69 @@
     background-color: #f7f7f7 !important;
   }
 
-  .trigger {
-    font-size: 18px;
-    line-height: 64px;
-    padding: 0 24px;
-    cursor: pointer;
-    transition: color 0.3s;
-
-    &:hover {
-      color: #546fff;
-    }
-  }
-
-  .logo {
-    height: 32px;
-    background: rgb(236, 236, 236);
-    margin: 16px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  nz-sider {
-    //display: flex;
-    //flex-direction: column;
-    //align-items: center;
-
-    .help-center {
-      margin-block-start: 13rem;
-      margin-block-end: 1rem;
-      justify-self: end;
-      width: 10rem !important;
-    }
-  }
-
   nz-content {
     margin: 0 1rem;
+
+    .inner-content {
+      padding: 1.5rem 3rem;
+      background: #fff;
+      min-height: 360px;
+      border-radius: 10px;
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+
+      > button {
+        align-self: end;
+      }
+    }
   }
 
   nz-breadcrumb {
     margin: 16px 0;
   }
 
-  .inner-content {
-    padding: 1.5rem 3rem;
-    background: #fff;
-    min-height: 360px;
-    border-radius: 10px;
+  nz-sider {
+    font-weight: 500;
+
+    .side-menu {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 100vh;
+
+      .logo {
+        height: 32px;
+        background: rgb(236, 236, 236);
+        margin: 16px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .trigger {
+        align-self: center;
+        padding-block-end: 1rem;
+        color: #1c274c;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        cursor: pointer;
+        transition: color 0.3s;
+        gap: 1rem;
+
+        &:hover {
+          color: #546fff;
+        }
+      }
+
+      .help-center {
+        margin-block-start: 13rem;
+        margin-block-end: 1rem;
+        justify-self: end;
+        width: 10rem !important;
+      }
+    }
   }
 
   nz-header {
