--- a/menuchi-app/src/theme.less
+++ b/menuchi-app/src/theme.less
@@ -13,3 +13,4 @@
 
 @border-radius-base: 4px;
 @btn-border-radius-base: 4px;
+@checkbox-border-radius: 4px;
